# mitopy

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-test.yaml  publish.yaml  test.yaml
dev/: annot_refactor.py
docs/: conf.py  index.rst
docs/source/: cli.rst  nf.rst  quickstart.rst  workflow.rst
example_data/: NA12878_20k_hg38.crai
mitopy/: align.py  annotate.py  call.py  cli.py  constants.py  coverage.py  executable.py  haplogroup.py  main.py  merge.py  pipeline.py  postprocess.py  preprocess.py  utils.py  visualize.py
mitopy/data/annotation_data/: clinvar.csv  conservation_scores.csv  general_annot.csv  gnomad_freq.csv  mitomap.csv  mitotip.csv  pon_mt_trna.csv  sift.csv
mitopy/data/annotation_data/snpeff/: README.md  snpeff.config
mitopy/data/filter_data/: rsrs_blacklist.bed  rsrs_blacklist.bed.idx
mitopy/data/mt_reference/: README.md
mitopy/data/mt_reference/rcrs/: rcrs.dict  rcrs.shift_back.chain  rcrs_shifted.dict  rcrs_shifted.fasta  (+2 more)
mitopy/data/vis_data/: mitomap.csv
test/: conftest.py  test_align.py  test_annotate.py  test_call.py  test_coverage.py  test_executable.py  test_haplogroup.py  test_merge.py  test_postprocess.py  test_preprocess.py  test_utils.py  test_visualize.py
test/test_files/bams/: NA12878_dedup.bam  NA12878_dedup.bam.bai  NA12878_shifted_dedup.bam  NA12878_shifted_dedup.bam.bai  NA12878_unmapped.bam
test/test_files/vcfs/: NA12878.vcf  NA12878.vcf.stats  NA12878_shifted.vcf  NA12878_shifted.vcf.stats
test/test_files/vis/: coverage.csv
(+15 files in other folders)
