[tool.poetry]
name = "mitopy"
version = "0.1.0"
description = ""
authors = ["bendda <viktoria.bendikova@gmail.com>"]
readme = "README.md"
packages = [{include = "mitopy"}]

[tool.poetry.dependencies]
python = "^3.10"
pysam = "^0.22.0"
click = "^8.1.7"
plotly = "^5.18.0"
kaleido = "0.2.1"
pandas = "^2.1.3"
vcfpy = "^0.13.6"
click-option-group = "^0.5.6"

[tool.poetry.scripts]
mitopy = "mitopy.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

